--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     color: white;
-    background-image: url("/imagenes/7.jpg");
+    background-image: url("../imagenes/7.jpg");
     opacity: 98%;
     background-attachment: fixed;
      background-size: 500px;
