--- a/css/styles.css
+++ b/css/styles.css
@@ -46,13 +46,10 @@ body {
     padding: 0 1rem;
 }
 
-/* @media screen and (max-width:800px) {
-    body section .dentro-contacto{
-        width: 90%;
-        background-color: aqua;
+@media screen and (max-width:800px) {
+    body section .contendord{
+        width: 95%;
     }
+}
 
-  /*   body section {
-        font-size: 5000px;
-    } */
 
